Fixed overlapping buttons on OS X.

--- a/src/appstyle-white.css
+++ b/src/appstyle-white.css
@@ -11,8 +11,13 @@ QMainWindow::separator:hover  {
     background: #696969;
 }
 QDockWidget::title  {
-    text-align: left;
+    text-align: center;
     background: #F1F1F1;
-    padding-left: 5px;
+    padding-left: 0px;
+}
+QDockWidget::title:hover  {
+text-align: center;
+background: #D1D1D1;
+padding-left: 0px;
 }
 
